--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,20 +1,20 @@
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:rotationX="-8">
 
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:layout_marginEnd="2dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
-        app:cardCornerRadius="6dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         android:elevation="7dp"
+        app:cardCornerRadius="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,10 +32,10 @@
                 android:id="@+id/amountTextViewrv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="6dp"
-                android:layout_marginEnd="4dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="6dp"
                 android:padding="2dp"
                 android:text="-300"
                 android:textSize="28sp"
@@ -61,10 +61,10 @@
                     android:id="@+id/categoryTextViewrv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="2dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="2dp"
                     android:padding="2dp"
                     android:text="Food"
                     android:textColor="#000000"
@@ -75,22 +75,21 @@
                     android:id="@+id/dateTextViewrv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="11dp"
+                    android:layout_marginEnd="8dp"
                     android:padding="2dp"
                     android:text="14/09/2018"
-                    android:textSize="12sp"
-                     />
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/descriptionTextViewrv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="3dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="11dp"
                 android:layout_marginTop="60dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="3dp"
                 android:fontFamily="sans-serif-condensed-light"
                 android:padding="4dp"
                 android:text="Dominos"
@@ -101,7 +100,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
-
 
 
         </android.support.constraint.ConstraintLayout>
