--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#aeea00</color>
     <color name="colorPrimaryDark">#79b700</color>
     <color name="colorAccent">#ff5722</color>
+    <color name="bg_color">#FF9800</color>
 </resources>
