--- a/app/src/main/res/layout/balance_fragment.xml
+++ b/app/src/main/res/layout/balance_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
-        android:background="#92C4E825"
+        android:background="#F3EDED"
         android:orientation="vertical"
         android:textAlignment="gravity"
         android:textDirection="firstStrong"
@@ -32,16 +32,19 @@
                 android:id="@+id/Education_title_name"
                 android:layout_width="250dp"
                 android:layout_height="89dp"
+                android:layout_gravity="center|left"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Education" />
+                android:text="Education"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/education_balance_view"
                 android:layout_width="87dp"
                 android:layout_height="71dp"
                 android:layout_gravity="right|center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textAlignment="center" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -53,16 +56,19 @@
                 android:id="@+id/Food_title_name"
                 android:layout_width="247dp"
                 android:layout_height="82dp"
+                android:layout_gravity="left|center"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Food" />
+                android:text="Food"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/food_balance_view"
                 android:layout_width="84dp"
                 android:layout_height="73dp"
                 android:layout_gravity="center|right"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textAlignment="center" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -74,16 +80,19 @@
                 android:id="@+id/Travel_title_name"
                 android:layout_width="249dp"
                 android:layout_height="91dp"
+                android:layout_gravity="center|left"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Travel" />
+                android:text="Travel"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/travel_balance_view"
                 android:layout_width="79dp"
                 android:layout_height="75dp"
                 android:layout_gravity="center|right"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textAlignment="center" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -95,16 +104,19 @@
                 android:id="@+id/health_title_name"
                 android:layout_width="246dp"
                 android:layout_height="93dp"
+                android:layout_gravity="left|center"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Health" />
+                android:text="Health"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/health_balance_view"
                 android:layout_width="78dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center|right"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textAlignment="center" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -116,16 +128,20 @@
                 android:id="@+id/other_title_name"
                 android:layout_width="250dp"
                 android:layout_height="94dp"
+                android:layout_gravity="center|left"
+                android:backgroundTint="#E8C8C8"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Others" />
+                android:text="Others"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/other_balance_view"
                 android:layout_width="79dp"
                 android:layout_height="66dp"
                 android:layout_gravity="right|center"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textAlignment="center" />
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
