--- a/app/src/main/res/layout/balance_fragment.xml
+++ b/app/src/main/res/layout/balance_fragment.xml
@@ -43,6 +43,7 @@
                 android:layout_width="87dp"
                 android:layout_height="71dp"
                 android:layout_gravity="right|center"
+                android:layout_marginRight="10dp"
                 android:text="TextView"
                 android:textAlignment="center" />
         </android.support.v7.widget.CardView>
@@ -67,6 +68,7 @@
                 android:layout_width="84dp"
                 android:layout_height="73dp"
                 android:layout_gravity="center|right"
+                android:layout_marginRight="10dp"
                 android:text="TextView"
                 android:textAlignment="center" />
         </android.support.v7.widget.CardView>
@@ -91,6 +93,7 @@
                 android:layout_width="79dp"
                 android:layout_height="75dp"
                 android:layout_gravity="center|right"
+                android:layout_marginRight="10dp"
                 android:text="TextView"
                 android:textAlignment="center" />
         </android.support.v7.widget.CardView>
@@ -116,6 +119,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center|right"
                 android:text="TextView"
+                android:layout_marginRight="10dp"
                 android:textAlignment="center" />
         </android.support.v7.widget.CardView>
 
@@ -140,6 +144,7 @@
                 android:layout_width="79dp"
                 android:layout_height="66dp"
                 android:layout_gravity="right|center"
+                android:layout_marginRight="10dp"
                 android:text="TextView"
                 android:textAlignment="center" />
         </android.support.v7.widget.CardView>
