--- a/app/src/main/res/layout/balance_fragment.xml
+++ b/app/src/main/res/layout/balance_fragment.xml
@@ -28,24 +28,28 @@
             android:layout_width="match_parent"
             android:layout_height="115dp">
 
-            <EditText
-                android:id="@+id/Education_title_name"
-                android:layout_width="250dp"
-                android:layout_height="89dp"
-                android:layout_gravity="center|left"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Education"
-                android:textAlignment="center" />
-
             <TextView
                 android:id="@+id/education_balance_view"
                 android:layout_width="87dp"
                 android:layout_height="71dp"
                 android:layout_gravity="right|center"
                 android:layout_marginRight="10dp"
+                android:background="#FFFFFF"
+                android:backgroundTint="#FFFFFF"
                 android:text="TextView"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Education_title_name"
+                android:layout_width="249dp"
+                android:layout_height="92dp"
+                android:layout_gravity="center|left"
+                android:text="Education"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -53,40 +57,33 @@
             android:layout_width="match_parent"
             android:layout_height="116dp">
 
-            <EditText
-                android:id="@+id/Food_title_name"
-                android:layout_width="247dp"
-                android:layout_height="82dp"
-                android:layout_gravity="left|center"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Food"
-                android:textAlignment="center" />
-
             <TextView
                 android:id="@+id/food_balance_view"
                 android:layout_width="84dp"
                 android:layout_height="73dp"
                 android:layout_gravity="center|right"
                 android:layout_marginRight="10dp"
+                android:background="#FFFFFF"
                 android:text="TextView"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Food_title_name"
+                android:layout_width="252dp"
+                android:layout_height="96dp"
+                android:layout_gravity="center|left"
+                android:text="Food"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/travel_card_view"
             android:layout_width="match_parent"
             android:layout_height="131dp">
-
-            <EditText
-                android:id="@+id/Travel_title_name"
-                android:layout_width="249dp"
-                android:layout_height="91dp"
-                android:layout_gravity="center|left"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Travel"
-                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/travel_balance_view"
@@ -95,7 +92,19 @@
                 android:layout_gravity="center|right"
                 android:layout_marginRight="10dp"
                 android:text="TextView"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Travel_title_name"
+                android:layout_width="250dp"
+                android:layout_height="87dp"
+                android:layout_gravity="left|center"
+                android:text="Travel"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -103,41 +112,32 @@
             android:layout_width="match_parent"
             android:layout_height="132dp">
 
-            <EditText
-                android:id="@+id/health_title_name"
-                android:layout_width="246dp"
-                android:layout_height="93dp"
-                android:layout_gravity="left|center"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Health"
-                android:textAlignment="center" />
-
             <TextView
                 android:id="@+id/health_balance_view"
                 android:layout_width="78dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center|right"
-                android:text="TextView"
                 android:layout_marginRight="10dp"
-                android:textAlignment="center" />
+                android:text="TextView"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/health_title_name"
+                android:layout_width="247dp"
+                android:layout_height="94dp"
+                android:layout_gravity="center|left"
+                android:text="Health"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/other_card_view"
             android:layout_width="match_parent"
             android:layout_height="124dp">
-
-            <EditText
-                android:id="@+id/other_title_name"
-                android:layout_width="250dp"
-                android:layout_height="94dp"
-                android:layout_gravity="center|left"
-                android:backgroundTint="#E8C8C8"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Others"
-                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/other_balance_view"
@@ -146,7 +146,19 @@
                 android:layout_gravity="right|center"
                 android:layout_marginRight="10dp"
                 android:text="TextView"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/other_title_name"
+                android:layout_width="249dp"
+                android:layout_height="97dp"
+                android:layout_gravity="center|left"
+                android:text="Other"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="34sp" />
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
