Made Layout Changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,11 +44,11 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        app:rippleColor="@android:color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_margin="@dimen/fab_margin"
+        android:backgroundTint="#E30F57"
+        app:rippleColor="@android:color/black"
         app:srcCompat="@android:drawable/ic_input_add" />
-
 </android.support.design.widget.CoordinatorLayout>
