--- a/app/src/main/res/layout/balance_fragment.xml
+++ b/app/src/main/res/layout/balance_fragment.xml
@@ -8,10 +8,9 @@
 
     <LinearLayout
         android:id="@+id/balancefragment"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         android:background="#F3EDED"
@@ -20,79 +19,86 @@
         android:textDirection="firstStrong"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <android.support.v7.widget.CardView
             android:id="@+id/education_card_view"
             android:layout_width="match_parent"
-            android:layout_height="115dp">
+            android:layout_height="145dp">
 
             <TextView
                 android:id="@+id/education_balance_view"
-                android:layout_width="87dp"
-                android:layout_height="71dp"
+                android:layout_width="85dp"
+                android:layout_height="80dp"
                 android:layout_gravity="right|center"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="15dp"
                 android:background="#FFFFFF"
                 android:backgroundTint="#FFFFFF"
                 android:text="TextView"
                 android:textAlignment="center"
+                android:textColor="#E91E63"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/Education_title_name"
-                android:layout_width="249dp"
-                android:layout_height="92dp"
+                android:layout_width="250dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center|left"
                 android:text="Education"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#E91E63"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/Food_card_view"
             android:layout_width="match_parent"
-            android:layout_height="116dp">
+            android:layout_height="145dp">
 
             <TextView
                 android:id="@+id/food_balance_view"
-                android:layout_width="84dp"
-                android:layout_height="73dp"
+                android:layout_width="85dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center|right"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="15dp"
                 android:background="#FFFFFF"
                 android:text="TextView"
                 android:textAlignment="center"
+                android:textColor="#E91E63"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/Food_title_name"
-                android:layout_width="252dp"
-                android:layout_height="96dp"
+                android:layout_width="250dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center|left"
                 android:text="Food"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#E91E63"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/travel_card_view"
             android:layout_width="match_parent"
-            android:layout_height="131dp">
+            android:layout_height="145dp">
 
             <TextView
                 android:id="@+id/travel_balance_view"
-                android:layout_width="79dp"
-                android:layout_height="75dp"
+                android:layout_width="85dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center|right"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="15dp"
                 android:text="TextView"
                 android:textAlignment="center"
+                android:textColor="#E91E63"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -104,60 +110,65 @@
                 android:text="Travel"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#E91E63"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/health_card_view"
             android:layout_width="match_parent"
-            android:layout_height="132dp">
+            android:layout_height="145dp">
 
             <TextView
                 android:id="@+id/health_balance_view"
-                android:layout_width="78dp"
-                android:layout_height="70dp"
+                android:layout_width="85dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center|right"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="15dp"
                 android:text="TextView"
                 android:textAlignment="center"
+                android:textColor="#E91E63"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/health_title_name"
-                android:layout_width="247dp"
-                android:layout_height="94dp"
+                android:layout_width="250dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center|left"
                 android:text="Health"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#E91E63"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/other_card_view"
             android:layout_width="match_parent"
-            android:layout_height="124dp">
+            android:layout_height="145dp">
 
             <TextView
                 android:id="@+id/other_balance_view"
-                android:layout_width="79dp"
-                android:layout_height="66dp"
+                android:layout_width="85dp"
+                android:layout_height="80dp"
                 android:layout_gravity="right|center"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="15dp"
                 android:text="TextView"
                 android:textAlignment="center"
+                android:textColor="#E91E63"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/other_title_name"
-                android:layout_width="249dp"
+                android:layout_width="250dp"
                 android:layout_height="97dp"
                 android:layout_gravity="center|left"
                 android:text="Other"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#E91E63"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
     </LinearLayout>
