--- a/app/src/main/res/layout/balance_fragment.xml
+++ b/app/src/main/res/layout/balance_fragment.xml
@@ -4,16 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FBE9BD"
     tools:context=".fragments.BalanceCategoryFragment">
 
     <LinearLayout
         android:id="@+id/balancefragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="414dp"
+        android:layout_height="734dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
         android:background="#F3EDED"
+        android:backgroundTint="#FBE9BD"
+        android:elevation="7dp"
         android:orientation="vertical"
         android:textAlignment="gravity"
         android:textDirection="firstStrong"
@@ -21,13 +24,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
         <android.support.v7.widget.CardView
             android:id="@+id/education_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="145dp">
+            android:layout_width="402dp"
+            android:layout_height="101dp"
+            android:layout_marginTop="@dimen/cardview_default_radius"
+            android:fadingEdge="none"
+            app:cardBackgroundColor="#FBE9BD">
 
             <TextView
                 android:id="@+id/education_balance_view"
@@ -35,11 +42,11 @@
                 android:layout_height="80dp"
                 android:layout_gravity="right|center"
                 android:layout_marginRight="15dp"
-                android:background="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
+                android:background="#FBE9BD"
+                android:backgroundTint="#FBE9BD"
                 android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#E91E63"
+                android:textAlignment="textStart"
+                android:textColor="#65E91E"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -51,14 +58,17 @@
                 android:text="Education"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="#E91E63"
-                android:textSize="34sp" />
+                android:textColor="#0C0C0C"
+                android:textSize="34sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/Food_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="145dp">
+            android:layout_width="399dp"
+            android:layout_height="117dp"
+            app:cardBackgroundColor="#FBE9BD">
 
             <TextView
                 android:id="@+id/food_balance_view"
@@ -66,10 +76,10 @@
                 android:layout_height="80dp"
                 android:layout_gravity="center|right"
                 android:layout_marginRight="15dp"
-                android:background="#FFFFFF"
+                android:background="#FBE9BD"
                 android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#E91E63"
+                android:textAlignment="textStart"
+                android:textColor="#54E91E"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -81,14 +91,15 @@
                 android:text="Food"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="#E91E63"
+                android:textColor="#0E0E0E"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/travel_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="145dp">
+            android:layout_width="402dp"
+            android:layout_height="134dp"
+            app:cardBackgroundColor="#FBE9BD">
 
             <TextView
                 android:id="@+id/travel_balance_view"
@@ -97,8 +108,8 @@
                 android:layout_gravity="center|right"
                 android:layout_marginRight="15dp"
                 android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#E91E63"
+                android:textAlignment="textStart"
+                android:textColor="#94E91E"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -110,14 +121,15 @@
                 android:text="Travel"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="#E91E63"
+                android:textColor="#171617"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/health_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="145dp">
+            android:layout_width="402dp"
+            android:layout_height="129dp"
+            app:cardBackgroundColor="#FBE9BD">
 
             <TextView
                 android:id="@+id/health_balance_view"
@@ -126,8 +138,8 @@
                 android:layout_gravity="center|right"
                 android:layout_marginRight="15dp"
                 android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#E91E63"
+                android:textAlignment="textStart"
+                android:textColor="#84E91E"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -139,14 +151,15 @@
                 android:text="Health"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="#E91E63"
+                android:textColor="#171717"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/other_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="145dp">
+            android:layout_width="402dp"
+            android:layout_height="119dp"
+            app:cardBackgroundColor="#FBE9BD">
 
             <TextView
                 android:id="@+id/other_balance_view"
@@ -155,8 +168,8 @@
                 android:layout_gravity="right|center"
                 android:layout_marginRight="15dp"
                 android:text="TextView"
-                android:textAlignment="center"
-                android:textColor="#E91E63"
+                android:textAlignment="textStart"
+                android:textColor="#7DE91E"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -168,7 +181,7 @@
                 android:text="Other"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="#E91E63"
+                android:textColor="#0E0E0E"
                 android:textSize="34sp" />
         </android.support.v7.widget.CardView>
     </LinearLayout>
